2003-06-10  Masatake YAMATO  <yamato@redhat.com>

	* module.c (at_module_init): Use at_input_add_handler_full
	for "PBM", "PNM", "PGM" and "PPM".
	Added some preprocessor tricks to deal with ImageMagick.
	(at_module_init): Use at_input_add_handler_full to deal
	with ImageMagick.

	* Makefile.am: Fix a typo.
	(libautotrace_la_SOURCES): Added module.c.
	Suggested by "jakobfrandsen" <jakobfrandsen@yahoo.dk>.

2003-06-08  Masatake YAMATO  <yamato@redhat.com>

	* private.h (struct _at_bitmap_reader): Defined.
	(at_input_init, at_param_init): Declared.	

	* Makefile.am (output_src): Remove typo(+).
	Suggested by "jakobfrandsen" <jakobfrandsen@yahoo.dk>.

2003-06-07  Mario Kleiner <mario.kleiner@tuebingen.mpg.de>

	* output-mif.c (output_mif_writer): fixed bug in output 
	of spline sample points.

2003-03-10  Martin Weber <martweb@gmx.net>

	* output-dxf.c: Now checks memory allocation.

2003-03-09  Martin Weber <martweb@gmx.net>

	* output-sk.c: Fixed sketch output.

2003-02-13  Masatake YAMATO  <yamato@redhat.com>

	* input.c (_at_input_format_entry): Added new field, 
	user_data_destroy_func.
	included private.h.
	(at_input_format_new): added data, user_data_destroy_func
	as arguments. Type of reader reader is changed to at_input_func.
	(at_input_init): Use g_str_hash and g_str_equal.
	(at_input_format_free): call user_data_destroy_func.
	(at_input_add_handler_full): added data, user_data_destroy_func
	as arguments. 
	(at_input_add_handler_full): call g_ascii_strdown. 
	(at_input_get_handler_by_suffix): return type is changed
	to at_bitmap_reader.
	(at_input_get_handler_by_suffix): call g_ascii_strdown. 

	* main.c: included glib.h.
	at_input_func is used.

	* input.h (at_input_func): added new type.
	included glib.

	* input.c: include private.h.

	* input-tga.c (MAX, MIN): removed it. glib provides
	the same functions.

	* autotrace.h (at_bitmap_reader): introduced as the
	replacement of at_input_read_func.

	* input-* (input_*_reader): added an argument.
