@@ -1,3 +1,14 @@
+2003-06-11  Masatake YAMATO  <yamato@redhat.com>
+
+	* tools-version.sh (TOOLS): Added glib-gettextize.
+
+	* autogen.sh: Added -I m4 when invoking aclocal.
+	Invoke glib-gettextize instead of gettextize.
+
+	* configure.in (GETTEXT_PACKAGE): Use AM_GLIB_GNU_GETTEXT
+	instead of AM_GNU_GETTEXT.
+	(AC_OUTPUT): Don't output m4/Makefile.in.
+
 2003-06-10  Masatake YAMATO  <yamato@redhat.com>
 
 	* module.c (at_module_init): Use at_input_add_handler_full
